--- a/Projects/tictacktoe/index.html
+++ b/Projects/tictacktoe/index.html
@@ -5,25 +5,42 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"> </script>
 	<script src="js/main.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
 	<title> tic tac toe</title>
 </head>
+
 <body ng-controller="gameController">
-  <h1> TIC   TAC   TOE</h1>
-  <p> This is a sample {{player1}}</p>
-  <p> Player 2 array {{player2}}</p>
-  <p> Player 2 wins {{twoWins}} </p>
-  <p> Player 1 wins {{oneWins}} </p>
-  <p> Its a tie {{drawCounter}} </p>
-	<table>
+  <h1 ng-show="header"> - TIC TAC TOE -  </h1>
+  <h1 class ="kwest" ng-show="yeezyWins"> - YEEZY WINS!! - </h1>
+  <h1 class ="tay" ng-show="tswiftWins"> - TSWIFT WINS!! - </h1>
+  <h1 class ="draw" ng-show="draw"> - ITS A TIE - </h1>
+
+  <h2> 
+    <span class="one">( OR THE IMA LET YOU FINISH.. </span>
+    BUT BEYONCE HAD ONE OF THE 
+    <span class="three">BEST MUSIC VIDEOS OF ALL TIME!!!) </span>
+  </h2>
+
+  <h3> 
+    <span class="one"> 
+     - KANYE WEST: {{oneWins}} 
+    </span>
+    DRAW: {{drawCounter}}
+    <span class="three"> 
+      TAYLOR SWIFT: {{twoWins}} - 
+    </span>
+  </h3>
+  
+  <table>
   <tr>
     <!-- This is for Box 1 -->
     <td id="box1"> 
       <div class="button" ng-click="boxOne()">    <span ng-hide="showOneFirst">
-            <img src="Images/Yeezy.jpg">
+            <img class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showOneSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
       </div>
     </td>
@@ -31,20 +48,20 @@
     <td id="box2">
     <div class="button" ng-click="boxTwo()">    
       <span ng-hide="showTwoFirst">
-            <img src="Images/Yeezy.jpg">
+            <img class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showTwoSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
       </div>
     </td>
     <!-- This is for box 3 -->
     <td id="box3">
       <div class="button" ng-click="boxThree()">    <span ng-hide="showThreeFirst">
-            <img src="Images/Yeezy.jpg">
+            <img class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showThreeSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
       </div>
     </td>
@@ -54,30 +71,30 @@
     <!-- This is for box 4 -->
     <td id="box4"> 
       <div class="button" ng-click="boxFour()">    <span ng-hide="showFourFirst">
-            <img src="Images/Yeezy.jpg">
+            <img class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showFourSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
       </div>
     </td>
     <!-- This is for box 5 -->
     <td id="box5">
       <div class="button" ng-click="boxFive()">    <span ng-hide="showFiveFirst">
-            <img src="Images/Yeezy.jpg">
+            <img class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showFiveSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
       </div>
     </td>		
     <!-- This is for box 6 -->
     <td id="box6">
       <div class="button" ng-click="boxSix()">    <span ng-hide="showSixFirst">
-            <img src="Images/Yeezy.jpg">
+            <img class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showSixSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
       </div>
     </td>
@@ -87,29 +104,29 @@
     <!-- This is for box 7 -->
     <td id="box7">
       <div class="button" ng-click="boxSeven()">    <span ng-hide="showSevenFirst">
-            <img src="Images/Yeezy.jpg">
+            <img  class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showSevenSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
       </div>
     </td>
     <!-- This is for box 8 -->
     <td id="box8">
       <div class="button" ng-click="boxEight()">    <span ng-hide="showEightFirst">
-            <img src="Images/Yeezy.jpg">
+            <img class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showEightSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
     </td>		
     <!-- This is for box 9 -->
     <td id="box9">
       <div class="button" ng-click="boxNine()">    <span ng-hide="showNineFirst">
-            <img src="Images/Yeezy.jpg">
+            <img class="yeezy" src="Images/Yeezy.png">
         </span>
         <span ng-hide="showNineSecond">
-            <img src="Images/bey.pg.png">
+            <img src="Images/Taylor.png">
         </span>
       </div>
     </td>
@@ -117,6 +134,9 @@
   <!-- The end of the third row -->
   </table>
   <!-- This is the end of the tic tac toe game board -->
- <button ng-click="resetGame()">New Game</button>
+</div>
+<div class="wrapper">
+    <button ng-click="resetGame()">New Game</button>
+</div>
 </body>
 </html>
