adding some new applications

--- a/Projects/tictacktoe/index.html
+++ b/Projects/tictacktoe/index.html
@@ -2,20 +2,24 @@
 <html ng-app='tickTacToe'>
 
 <head>
+  <!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <!-- Angular JS -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"> </script>
+  <!-- Javascript -->
 	<script src="js/main.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+  <!-- Fonts  -->
   <link href='http://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
 	<title> tic tac toe</title>
 </head>
 
+<!-- Headers -->
 <body ng-controller="gameController">
   <h1 ng-show="header"> - TIC TAC TOE -  </h1>
   <h1 class ="kwest" ng-show="yeezyWins"> - YEEZY WINS!! - </h1>
   <h1 class ="tay" ng-show="tswiftWins"> - TSWIFT WINS!! - </h1>
   <h1 class ="draw" ng-show="draw"> - ITS A TIE - </h1>
-
+<!-- Second Row of Headers -->
   <h2> 
     <span class="one">( OR THE IMA LET YOU FINISH.. </span>
     BUT BEYONCE HAD ONE OF THE 
